--- a/style.css
+++ b/style.css
@@ -1,25 +1,43 @@
+body{
+    background-color: gray;
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.header-geral{
+    width: 100%;
+    height: 61px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.options{
+    display: flex;
+    gap: 32px;
+}
+
 .img-nome {
+    display: flex;
     font-size: 16px;
     font-family: bold;
-    background-color: 282C33;
 }
 
 .apresentacao h1{
     font-size: 32px;
-    font-family: semibold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .apresentacao p{
     font-size: 16px;
 }
 
-
-
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
     .img-nome {
         display: flex;
         padding: 16px 16px;
     }
 
 
-}
+} */
